test/type_inference/negative/type_args8.output
type_args8.impala:6 col 8: error: could not infer parameter type for y.
